feat: add video recipe cards and video player page with YouTube integration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   
   # Functional Programming
   dartz: ^0.10.1
+  
+  # URL Launcher
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
